Remove old (no longer used) /api/formio/nces route
